Fix top-nav spacing

--- a/src/index.css
+++ b/src/index.css
@@ -144,6 +144,7 @@ h2 {
 
 .navbar-brand img {
   height: 3rem;
+  margin-left: 1rem;
 }
 
 .search-bar {
